style.css
body {
  display: flex;
  min-height: 97vh;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: "Orbitron", sans-serif;
  background-color: #fbf1ea;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 402px;
  height: auto;
  gap: 5px;
  background-color: #6c757d;
  padding: 10px 6px;
}

.calculator-buttons {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 2px;
  padding: 1px 1px;
}

.calculator-buttons button {
  padding: 5px 10px;
  font-size: 42px;
  font-family: "Orbitron", sans-serif;
  width: 96px;
  background-color: #495057;
  color: #e9ecef;
}

#clear {
  background-color: rgb(255, 75, 75);
  color: black;
}

#back-space {
  background-color: #48cae4;
  color: black;
}

#add,
#subtract,
#multiply,
#divide,
#mod {
  background-color: #e5cdb0;
  color: black;
}

#equal {
  background-color: #bfd200;
  color: black;
}

.display-container {
  display: flex;
  align-self: center;
  justify-content: flex-end;
  border: solid 3px silver;
  width: 398px;
  height: 200px;
  background-color: #343a40;
}

p {
  align-self: center;
  font-size: 56px;
  padding: 10px;
  margin-top: 20px;
  margin-bottom: 20px;
  color: #e9ecef;
  overflow: hidden;
}

